deploy/cloudformation/lib/dependencies/security_groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Retail Store Sample App - Security Groups

Parameters:
  EnvironmentName:
    Type: String
  VpcId:
    Type: AWS::EC2::VPC::Id

# TODO - Check ECS user name needed
Resources:
  MQSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows access to the Amazon MQ Broker on port 5671
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5671
          ToPort: 5671
          SourceSecurityGroupId: !Ref ECSSecurityGroup
      Tags:
      - Key: Name
        Value: !Sub "${EnvironmentName}"

  ElastiCacheSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows access to the ElastiCache Redis on port 6379
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref ECSSecurityGroup
      Tags:
      - Key: Name
        Value: !Sub "${EnvironmentName}"
  
  PostgresRDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows access to the RDS DB on port 5432
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ECSSecurityGroup
      Tags:
      - Key: Name
        Value: !Sub "${EnvironmentName}"
  
  MySQLRDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows access to the RDS DB on port 3306
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref ECSSecurityGroup
      Tags:
      - Key: Name
        Value: !Sub "${EnvironmentName}"

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Control access to RDS
      SecurityGroupIngress:
        # Only allow inbound access to ECS from the ELB
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
      - Key: Name
        Value: !Sub "${EnvironmentName}"

  ALBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VpcId
      GroupName:  InternetAlbSG
      GroupDescription: Enable HTTP/HTTPS access
      SecurityGroupIngress:
        - IpProtocol: 'tcp'
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: 'tcp'
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Sub "${EnvironmentName}"

Outputs:
  MQSecurityGroup:
    Description: MQ Group Name
    Value: !Ref MQSecurityGroup

  ElastiCacheSecurityGroup:
    Description: ElastiCache Security Group Name
    Value: !Ref ElastiCacheSecurityGroup

  MySQLRDSSecurityGroup:
    Description: MySQL RDS Security Group Name
    Value: !Ref MySQLRDSSecurityGroup
  
  PostgresRDSSecurityGroup:
    Description: Postgres RDS Security Group Name
    Value: !Ref PostgresRDSSecurityGroup

  ECSSecurityGroup:
    Description: ECS Security Group Name
    Value: !Ref ECSSecurityGroup

  ALBSecurityGroup:
    Description: ALB Security Group Name
    Value: !Ref ALBSecurityGroup
